Signed-off-by: Yury Dalidovich <yury.dalidovich@LeverX.local>

--- a/HW2/style3.css
+++ b/HW2/style3.css
@@ -1,53 +1,4 @@
-header {
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
-    height: 15vh;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border: solid 1px black;
-    box-sizing: border-box;
-}
-
-section:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-footer {
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
-    height: 15vh;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border: solid 1px black;
-    box-sizing: border-box;
-}
-
-nav {
-    float: left;
-    width: 10%;
-    height: 600px;
-    margin-left: 5%;
-    padding-top: 1%;
-    /* position: fixed; */
-    box-sizing: border-box;
-    opacity: 0.5;
-    /* border: 0px; */
-    box-sizing: border-box;
-}
-nav a:hover {
-    color: blue;
-}
-article {
-    float: right;
-    width: 80%;
-    margin-right: 5%;
-    box-sizing: border-box;
-}
-/* #main {
+#main {
     display: flex;
     flex-direction: column;
     width: 90%;
@@ -60,8 +11,8 @@ article {
     border-bottom-right-radius: 20px;
 }
 #central {
-    height: 50vh;
-    padding: 5%;
+    /* height: 50vh; */
+    padding: 5px;
 }
 #footer {
     height: 15vh;
@@ -79,7 +30,6 @@ article {
     width: 10%;
     height: 600px;
     position: fixed;
-    box-sizing: border-box;
     opacity: 0.5;
     border: 1px solid black;
     box-sizing: border-box;
@@ -90,4 +40,4 @@ article {
 #sidebar>a {
     font-family: cursive;
     font-size: 90%;
-} */
+}
