--- a/HW2/style4.css
+++ b/HW2/style4.css
@@ -1,54 +1,36 @@
-div {
-    box-sizing: border-box;
+* {
+    overflow: auto;
 }
-
-#header {
+header {
     width: 100%;
     height: 10vh;
     display: flex;
-    flex-direction: row;
-    background-color: gray;
+    background-color: lightblue;
     justify-content: space-between;
     align-items: center;
-    position: relative;
     opacity: 0.5;
+    object-fit: contain;
 }
-
-#header:hover {
-    background-color: lightgray;
+header:hover {
+    background-color: blue;
 }
-
-#main {
+article {
     width: 100%;
-    position: relative;
-    /* top: 10%; */
-    padding: 15%;
-    margin-bottom: 50px;
-    border-left: solid 5px black;
-    border-right: solid 5px black;
-    background-color: khaki;
+    padding-left: 15%;
+    padding-right: 15%;
+    border-left: solid 2px black;
+    border-right: solid 2px black;
+    box-sizing: border-box;
 }
-
 #column {
     width: 50%;
-    display: inline-block;
-    margin: 0;
 }
-
-#footer {
+footer {
     width: 100%;
     max-height: 15vh;
-    position: relative;
-    background-color: gray;
+    background-color: lightblue;
     opacity: 0.5;
 }
-
-#footer:hover {
+footer:hover {
     background-color: rgba(0, 0, 0, 1);
-}
-
-#page {
-    display: flex;
-    flex-direction: column;
-    position: relative;
 }
